# Py12_HW_8

./: app.py  create.py  db.py  main.py  models.py  pyproject.toml  quotes.json  readme.md
pub-sub/: consumer.py  models.py  producer.py  rabbit.py
