[tool.poetry]
name = "hw-8"
version = "0.1.0"
description = ""
authors = ["Oleksandr <115171014+OleksandrPiatnytsia@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw_8"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
